# study

./: .env.example  .gitignore  LICENSE  PROJECT_SUMMARY.md  README.md  SUBMISSION_EVIDENCE.md  __main__.py  gradio_app.py  pyproject.toml  quickstart.sh  requirements.txt  run_tests.sh  tracing.py
agents/: __init__.py  audio_agent.py  customer_agent.py  image_agent.py  text_agent.py  video_agent.py
evals/audio/: test_cases.py
evals/image/: test_cases.py
evals/test_data/: README.md
evals/text/: test_cases.py
evals/video/: test_cases.py
moderation_types/: __init__.py  moderation_result.py
multimodal_moderation/: env.py  gradio_app.py
multimodal_moderation/agents/: customer_agent.py  image_agent.py  text_agent.py
multimodal_moderation/types/: moderation_result.py
schemas/: __init__.py  moderation_result.py
submission_evidence/: README.md  all_tests.txt  runner.txt  test_gradio_app.txt  test_image_agent.txt  test_moderation_result.txt  test_text_agent.txt
tests/: conftest.py  test_audio_agent.py  test_env_setup.py  test_gradio_app.py  test_image_agent.py  test_moderation_result.py  test_text_agent.py  test_video_agent.py
