[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "multimodal_moderation"
version = "0.1.0"
description = "A multimodal content moderation agent using Google AI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pydantic-ai>=0.1.0",
    "pydantic-evals>=0.1.0",
    "google-genai>=0.3.0",
    "python-dotenv>=1.0.0",
    "gradio>=5.0,<6.0",
    "requests>=2.31.0",
    "filetype>=1.2.0",
    "arize-phoenix>=4.0.0",
    "openinference-instrumentation-pydantic-ai>=0.1.7",
    "tenacity>=8.0.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
]

[project.scripts]
multimodal-moderation = "multimodal_moderation.app:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests requiring live API keys",
]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["multimodal_moderation*"]
